# Advanced_Rag_Codes

./: .gitignore  README.md  pyproject.toml  requirements.txt
06_rerankers/notebooks/: flashrank_reranker.ipynb
07_rerankers/: main.py
07_rerankers/notebooks/: cohere_reranker.ipynb
12_rag_multimodal/: .gitignore  additional_dependencies_installation_steps.md  main.py  pyproject.toml  requirements.txt
12_rag_multimodal/notebook/: strategy2_multimodal_embeddings.ipynb
notebook/: strategy1_text_conversion.ipynb
