[project]
name = "rag-reranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashrank>=0.2.10",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
]
