[project]
name = "rag-multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "open-clip-torch>=3.3.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "unstructured[local-inference,pdf]>=0.22.28",
]
